--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Web App 2022B!!!</h1>
-    <p class="name"></p>
+    <p>Player 1: Chris</p>
     <script src="./script.js"></script>
 </body>
 </html>
