--- a/Lab01-HTML/index.html
+++ b/Lab01-HTML/index.html
@@ -7,6 +7,9 @@
     <title>Lab01 - HTML</title>
 </head>
 <body>
-    
+    <p>Frankz Lenin Alarcon Cnado</p>
+    <label for="file">File progress:</label>
+
+    <progress id="file" max="100" value="99"> 70% </progress>
 </body>
 </html>
