Primer labo HTML

--- a/Lab01-HTML/index.html
+++ b/Lab01-HTML/index.html
@@ -7,9 +7,28 @@
     <title>Lab01 - HTML</title>
 </head>
 <body>
-    <p>Frankz Lenin Alarcon Cnado</p>
-    <label for="file">File progress:</label>
+    <p><strong>Est.</strong> Frankz Lenin Alarcon Cnado</p>
+    <em>primero</em><br><em>segundo</em><br><em>tercero</em>
 
-    <progress id="file" max="100" value="99"> 70% </progress>
+    <p>cuarto</p>
+    <p>quinto</p>
+    <p>sexto</p>
+
+    <img
+        width="500px" 
+        src="https://preview.redd.it/tfugj4n3l6ez.png?auto=webp&s=b8163176d8482d5e78ac631e16b7973a52e3b188" 
+        alt=""
+    >
+    <p>Un enlace a mis repos en github <a href="https://github.com/FrankzAlarcon?tab=repositories" title="Mi github" target="_blank">Mi Github</a></p>
+
+    <a href="https://youtube.com">Ir a YouTube</a>    
+
+    <!-- el uso del atributo deshabilitado evita que el usuario final introduzca texto en el cuadro de entrada -->
+    <input type="text" disabled value='Esto es 'divertido'?' />
+
+    <!-- se permite la entrada de texto, ya que no contiene el atributo deshabilitado -->
+    <input type="text" />
+
+
 </body>
 </html>
